sumo/tests/netconvert/errors/xml_no_nod/errors.netconvert.exe
Error: The xml-edges - file 'input_edges.edg.xml' is corrupt:
Error: On parsing edge '1':
Error: The xml-edges - file 'input_edges.edg.xml' is corrupt:
Error:  The data are not coherent or the nodes are not given...
Error: The xml-edges - file 'input_edges.edg.xml' is corrupt:
Error: On parsing edge '2':
Error: The xml-edges - file 'input_edges.edg.xml' is corrupt:
Error:  The data are not coherent or the nodes are not given...
Error: The xml-edges - file 'input_edges.edg.xml' is corrupt:
Error: On parsing edge '3':
Error: The xml-edges - file 'input_edges.edg.xml' is corrupt:
Error:  The data are not coherent or the nodes are not given...
Error: The xml-edges - file 'input_edges.edg.xml' is corrupt:
Error: On parsing edge '4':
Error: The xml-edges - file 'input_edges.edg.xml' is corrupt:
Error:  The data are not coherent or the nodes are not given...
Error: No nodes loaded.
Quitting (conversion failed).
